--- a/style.css
+++ b/style.css
@@ -1,62 +1,71 @@
-.pomodoro {
-    height:110px;
-    overflow:hidden;
-    position:relative;
-    width:200px;
-}
-.datetime {
-    height:110px;
-    position:absolute;
-    right:-200px;
-    top:0;
-    width:200px;
-}
 
-.config {
-    height:110px;
-    position:absolute;
-    right:-200px;
-    top:0;
-    width:200px;
-}
-
+/* Window */
 body {
     -webkit-app-region: drag;
+    background-color:white; /* fallback color */
     background-color:rgba(0, 0, 0, 0.0);
-    height:110px;
+    height:85px;
     overflow:hidden;
-    width:200px;
+    width:220px;
+}
+.pomodoro {
+    height:85px;
+    overflow:hidden;
+    position:relative;
+    width:220px;
 }
 
+/* Views */
+.datetime {
+    height:85px;
+    position:absolute;
+    right:-220px;
+    top:0;
+    width:220px;
+}
+.config {
+    height:85px;
+    position:absolute;
+    right:-220px;
+    top:0;
+    width:220px;
+}
+
+/* Start/Stop/Pause Bouton */
 .startstop {
     -webkit-app-region: no-drag;
+    color:black;
     left: 139px;
     position: absolute;
     top: 10px;
 }
 
+/* Boutons */
 .conf {
     -webkit-app-region: no-drag;
-    left: 25px;
+    color:black;
+    left: 195px;
     position: absolute;
-    top: 3px;
+    top: 32px;
 }
 
 .quit {
     -webkit-app-region: no-drag;
-    left: 5px;   
+    color:black;
+    left: 195px;
     position: absolute;
-    top: 3px;
-    visibility: hidden;
+    top: 12px;
 }
 
 .date {
     -webkit-app-region: no-drag;
-    left: 180px;
+    color:black;   
+    left: 195px;
     position: absolute;
     top: 55px;
 }
 
+/* pomodori indicator */
 .pomodori {
     -webkit-app-region: no-drag;
     color:rgb(195, 41, 41);
@@ -98,6 +107,7 @@ body {
     top: 60px;
 }
 
+/* Canvas */
 .counter {
     -webkit-app-region: drag;
     left: 125px;
@@ -112,12 +122,35 @@ body {
     top: 0;
 }
 
-
-.input-group-xs>.form-control,
-.input-group-xs>.input-group-addon,
-.input-group-xs>.input-group-btn>.btn {
+/* configuration inputs */
+.text-input-xs
+{
+    -webkit-app-region: drag;
+    font-size: 10px;
     height: 22px;
     padding: 1px 5px;
-    font-size: 12px;
-    line-height: 1.5;
+    width: 75px;
+}
+.input-xs
+{
+    -webkit-app-region: no-drag;
+    font-size: 10px;
+    height: 22px;
+    padding: 0px 10px 0px 5px;
+    width: 50px;
+    text-align: center;
+}
+.units-input-xs
+{
+    -webkit-app-region: drag;
+    font-size: 10px;
+    height: 22px;
+    padding: 1px 5px;
+    width: 20px;
+}
+.btn-save {
+    -webkit-app-region: no-drag;
+    left: 150px;
+    position: absolute;
+    top: 0px;
 }
