--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Window */
 body {
     -webkit-app-region: drag;
@@ -131,15 +130,17 @@ body {
     padding: 1px 5px;
     width: 75px;
 }
+
 .input-xs
 {
     -webkit-app-region: no-drag;
     font-size: 10px;
     height: 22px;
-    padding: 0px 10px 0px 5px;
-    width: 50px;
+    padding: 0 10px 0 5px;
     text-align: center;
+    width: 50px;
 }
+
 .units-input-xs
 {
     -webkit-app-region: drag;
@@ -152,35 +153,35 @@ body {
     -webkit-app-region: no-drag;
     left: 150px;
     position: absolute;
-    top: 0px;
+    top: 0;
 }
 
 .week{
-    position:absolute;
-    top:90px;
-    font-size:8px;
-    text-align: center;
     font-family: "DejaVu Sans Mono", "Lucida Console", "Andale Mono", monospace;
+    font-size:8px;
+    position:absolute;
+    text-align: center;
+    top:90px;
 }
 
 .month{
-    position:absolute;
-    top:0px;
-    font-size:8px;
-    text-align: center;
     font-family: "DejaVu Sans Mono", "Lucida Console", "Andale Mono", monospace;
+    font-size:8px;
+    position:absolute;
+    text-align: center;
+    top:0;
 }
 
 .day{
-    width:10px;
+    background:#d3d3d3;
     height:10px;
     position:absolute;
-    background:#d3d3d3;
+    width:10px;
 }
 
 .today{
-    padding:-1px -1px -1px -1px;
     box-shadow: 0 0 0 1px red inset;
+    padding:-1px -1px -1px -1px;
 }
 
 .mon {
@@ -204,4 +205,3 @@ body {
 .sun {
     top:77px;
 }
-
