--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-
+/*
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+}
+*/
 /* Window */
 body {
     -webkit-app-region: drag;
@@ -7,7 +13,9 @@ body {
     height:85px;
     overflow:hidden;
     width:220px;
+    margin: 0px;
 }
+
 .pomodoro {
     height:85px;
     overflow:hidden;
@@ -59,7 +67,7 @@ body {
 
 .date {
     -webkit-app-region: no-drag;
-    color:black;   
+    color:black;
     left: 195px;
     position: absolute;
     top: 55px;
@@ -75,19 +83,19 @@ body {
 }
 
 .pomodori1 {
-    left: 5px;    
+    left: 5px;
     top:  60px;
 }
 .pomodori2 {
-    left: 20px;    
+    left: 20px;
     top:  60px;
 }
 .pomodori3 {
-    left: 35px;    
+    left: 35px;
     top:  60px;
 }
 .pomodori4 {
-    left: 50px;    
+    left: 50px;
     top: 60px;
 }
 .pomodori5 {
@@ -123,34 +131,211 @@ body {
 }
 
 /* configuration inputs */
-.text-input-xs
-{
-    -webkit-app-region: drag;
-    font-size: 10px;
-    height: 22px;
-    padding: 1px 5px;
-    width: 75px;
-}
-.input-xs
-{
+.nav-config {
     -webkit-app-region: no-drag;
-    font-size: 10px;
-    height: 22px;
-    padding: 0px 10px 0px 5px;
-    width: 50px;
-    text-align: center;
-}
-.units-input-xs
-{
-    -webkit-app-region: drag;
-    font-size: 10px;
-    height: 22px;
-    padding: 1px 5px;
-    width: 20px;
-}
-.btn-save {
-    -webkit-app-region: no-drag;
-    left: 150px;
+    color:black;
     position: absolute;
-    top: 0px;
+}
+.nav-config-limit {
+    visibility: hidden;
+}
+#nav-config-up {
+    left: 5px;    
+    top: 5px;    
+}
+#nav-config-down {
+    left: 5px;    
+    bottom: 5px;    
+}
+.range-label {
+    -webkit-app-region: drag;
+    font-size: 15px;
+    height: 22px;
+    width: 100%;
+    font-family: sans-serif;
+    font-weight: bold;
+    color:black;
+    position: relative;
+    top: 25px;
+}
+
+.nav-config {
+    position: absolute;
+}
+
+#saveConf {
+    -webkit-app-region: no-drag;
+    color:black;
+    left: 195px;
+    position: absolute;
+    top: 12px;
+}
+.range-field {
+    -webkit-app-region: no-drag;
+}
+.range-group {
+    position: absolute;
+    left: 20px;
+    width: 165px;
+}
+
+
+/***************
+      Range
+***************/
+.range-field {
+  position: relative;
+    height: 85px;
+    margin: 0px;
+}
+
+input[type=range], input[type=range] + .thumb {
+  cursor: pointer;
+}
+
+input[type=range] {
+  position: relative;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  margin: 30px 0px 20px 0px;
+  padding: 0;
+}
+
+input[type=range] + .thumb {
+  position: absolute;
+  border: none;
+  height: 0;
+  width: 0;
+  border-radius: 50%;
+  background-color: rgb(195, 39, 41);
+  top: 10px;
+  margin-left: -6px;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+input[type=range] + .thumb .value {
+  display: block;
+  width: 30px;
+  text-align: center;
+  color:  rgb(195, 39, 41);
+  font-size: 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+input[type=range] + .thumb.active {
+  border-radius: 50% 50% 50% 0;
+}
+
+input[type=range] + .thumb.active .value {
+  color: #000;
+  margin-left: 0px;
+  margin-top: 5px;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  height: 3px;
+  background: #000;
+  border: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  background-color: rgb(195, 39, 41);
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  margin: -5px 0 0 0;
+  transition: .3s;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+/*  background: #cccccc;*/
+  background: rgba(255, 35, 38, 0.74);
+}
+
+input[type=range] {
+  /* fix for FF unable to apply focus style bug  */
+  /* border: 1px solid white; */
+  /*required for proper track sizing in FF*/
+}
+
+input[type=range]::-moz-range-track {
+  height: 3px;
+  background: #ddd;
+  border: none;
+}
+
+input[type=range]::-moz-range-thumb {
+  border: none;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  background: rgb(195, 39, 41);
+  margin-top: -5px;
+}
+
+/*hide the outline behind the border*/
+input[type=range]:-moz-focusring {
+  outline: 1px solid white;
+  outline-offset: -1px;
+}
+
+input[type=range]:focus::-moz-range-track {
+  background: #ccc;
+}
+
+input[type=range]::-ms-track {
+  height: 3px;
+  /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
+  background: transparent;
+  /*leave room for the larger thumb to overflow with a transparent border */
+  border-color: transparent;
+  border-width: 6px 0;
+  /*remove default tick marks*/
+  color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+  background: #777;
+}
+
+input[type=range]::-ms-fill-upper {
+  background: #ddd;
+}
+
+input[type=range]::-ms-thumb {
+  border: none;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  /*background: #26a69a;*/
+  background:rgb(195, 39, 41);
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: #888;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+  background: #ccc;
 }
