--- a/style.css
+++ b/style.css
@@ -205,3 +205,27 @@ body {
 .sun {
     top:77px;
 }
+
+.v1 {
+    background:#9fff93;
+}
+
+.v2 {
+    background:#6fff5d;
+}
+
+.v3 {
+    background:#3eff26;
+}
+
+.v4 {
+    background:#1cff00;
+}
+
+.v5 {
+    background:#16c600;
+}
+
+.v6 {
+    background:#0f8800;
+}
