--- a/config.css
+++ b/config.css
@@ -86,6 +86,8 @@
     font-weight: bold;
     color:black;
     font-size: 16px;
+
+    z-index: 1;
 }
 .icon-slide {
     color:black;
@@ -93,6 +95,8 @@
 }
 form {
     display: inline-block;
+
+    z-index: 2;
 }
 
 /***************
@@ -150,10 +154,13 @@ input[type=range] + .thumb .value {
 
 input[type=range] + .thumb.active {
     border-radius: 0% 50% 0% 50%;
+    z-index: 10;
+    /*
     -webkit-transform-origin: 50% 50%;
     transform-origin: 50% 50%;
     -webkit-transform: translateX(-15px);
     transform: translateX(-15px);
+    */
 }
 
 input[type=range] + .thumb.active .value {
